DB-7433 Run Vacuum in the background and tunning JVM params