@@ -32,7 +32,7 @@
         <ee_out/>
         <skipTests>${maven.skip.tests}</skipTests>
         <skip.dep.copy>${skipSparkPrepare}</skip.dep.copy>
-        <argLine>-Xmx4g -XX:MaxPermSize=256m ${jacocoAgent}</argLine>
+        <argLine>-Xms64m -Xmx4g ${jacocoAgent}</argLine>
     </properties>
     <dependencies>
         <dependency>
@@ -730,8 +730,11 @@
                         </goals>
                         <configuration>
                             <groups>com.splicemachine.test.SerialTest</groups>
-                            <excludedGroups>${excluded.categories}</excludedGroups>
-                            <argLine>-Xmx3g</argLine>
+                            <excludedGroups>
+                                com.splicemachine.test.NoVacuumTest,
+                                ${excluded.categories}
+                            </excludedGroups>
+                            <argLine>-Xmx2g -Xms64m</argLine>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <dependenciesToScan>
                                 <dependency>com.splicemachine:splice_machine</dependency>
@@ -755,14 +758,17 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
-                            <excludedGroups>com.splicemachine.test.SerialTest, com.splicemachine.test.RestoreTest,
+                            <excludedGroups>
+                                com.splicemachine.test.NoVacuumTest,
+                                com.splicemachine.test.SerialTest,
+                                com.splicemachine.test.RestoreTest,
                                 ${excluded.categories}
                             </excludedGroups>
                             <parallel>classes</parallel>
                             <threadCount>1</threadCount>
                             <!-- -sf- single-threaded for now -->
                             <perCoreThreadCount>false</perCoreThreadCount>
-                            <argLine>-Xmx5g</argLine>
+                            <argLine>-Xmx2g -Xms64m</argLine>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <dependenciesToScan>
                                 <dependency>com.splicemachine:splice_machine</dependency>
@@ -783,7 +789,7 @@
                         </goals>
                         <configuration>
                             <groups>com.splicemachine.test.RestoreTest</groups>
-                            <argLine>-Xmx3g</argLine>
+                            <argLine>-Xmx2g -Xms64m</argLine>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <includes>
                                 <include>**/*RestoreIT.java</include>
@@ -1049,7 +1055,9 @@
                                 <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-Dzookeeper.sasl.client=false</argument>
                                 <argument>-Xmx1g</argument>
-                                <argument>-Xms1g</argument>
+                                <argument>-Xms64m</argument>
+                                <argument>-XX:MinHeapFreeRatio=10</argument>
+                                <argument>-XX:MaxHeapFreeRatio=50</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>com.splicemachine.kafka.TestKafkaCluster</argument>
                                 <argument>localhost:2181</argument>
@@ -1119,7 +1127,9 @@
                                 <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-Dzookeeper.sasl.client=false</argument>
                                 <argument>-Xmx1g</argument>
-                                <argument>-Xms1g</argument>
+                                <argument>-Xms64m</argument>
+                                <argument>-XX:MinHeapFreeRatio=10</argument>
+                                <argument>-XX:MaxHeapFreeRatio=50</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4002</argument>
                                 <argument>org.apache.zookeeper.server.ZooKeeperServerMain</argument>
@@ -1203,6 +1213,34 @@
             </build>
         </profile>
         <profile>
+            <id>spliceVacuum</id>
+            <activation>
+                <property>
+                    <name>spliceVacuum</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.4.0</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>java</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <classpathScope>test</classpathScope>
+                            <mainClass>com.splicemachine.test.SpliceTestVacuum</mainClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>spliceYarn</id>
             <activation>
                 <property>
@@ -1233,6 +1271,9 @@
                             <mainClass>com.splicemachine.test.SpliceTestYarnPlatform</mainClass>
                             <arguments>
                                 <!-- Root of the serve classpath. Yarn config file (yarn-site.xml) will be written here. -->
+                                <!--<argument>-agentpath:/opt/jprofiler/bin/linux-x64/libjprofilerti
+                                .so=port=8850,nowait,id=108,config=/home/wangbin/.jprofiler10/config.xml</argument>
+                                -->
                                 <argument>${project.build.directory}/classes</argument>
                                 <argument>${secure}</argument>
                                 <argument>${nodeCount}</argument>
@@ -1274,6 +1315,10 @@
                                 <argument>-XX:+FlightRecorder</argument> -->
                                 <argument>-Djava.security.krb5.conf=${project.build.directory}/krb5.conf</argument>
                                 <argument>-Dlog4j.configuration=${log4j.config.uri}</argument>
+                                <!--<argument>-agentpath:/opt/jprofiler/bin/linux-x64/libjprofilerti.so=port=8851</argument>-->
+                                  <!--,nowait,id=108,config=/home/wangbin/.jprofiler10/config.xml</argument>-->
+                                <argument>-XX:MinHeapFreeRatio=10</argument>
+                                <argument>-XX:MaxHeapFreeRatio=30</argument>
                                 <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-Djava.awt.headless=true</argument>
                                 <argument>-Dzookeeper.sasl.client=false</argument>
@@ -1285,8 +1330,8 @@
                                 <argument>
                                     -Djava.library.path=${project.build.directory}/../../assembly/${envClassifier}/native/${os.detected.classifier}:/usr/local/lib/
                                 </argument>
-                                <argument>-Xmx6g</argument>
-                                <argument>-Xms1g</argument>
+                                <argument>-Xmx2g</argument>
+                                <argument>-Xms64m</argument>
                                 <!-- Spark Sys props -->
                                 <argument>-Dsplice.spark.app.name=SpliceMachine</argument>
                                 <argument>-Dsplice.spark.eventLog.enabled=true</argument>
@@ -1337,15 +1382,19 @@
                                 <argument>-Dsplice.spark.serializer=com.splicemachine.serializer.SpliceKryoSerializer
                                 </argument>
                                 <argument>-Dsplice.spark.shuffle.compress=false</argument>
+                                <!--<argument>-Dsplice.spark.memory.storageFraction=0.2</argument>-->
                                 <argument>-Dsplice.spark.driver.extraJavaOptions=
                                     -Djava.security.krb5.conf=${project.build.directory}/krb5.conf
                                     ${hbase.rootdir}
                                     -Dhdp.version=2.6.3
                                     -enableassertions
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=50
                                 </argument>
                                 <argument>-Dsplice.spark.yarn.am.extraJavaOptions=
                                     -Dhdp.version=2.6.3
                                     -Djava.security.krb5.conf=${project.build.directory}/krb5.conf
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=50
+                                    -XX:+UseG1GC
                                 </argument>
                                 <argument>-Dsplice.spark.executor.extraJavaOptions=
                                     ${hbase.rootdir}
@@ -1354,6 +1403,27 @@
                                     -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4020
                                     -Djava.security.krb5.conf=${project.build.directory}/krb5.conf
                                     -enableassertions
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=40
+                                    <!--
+                                    -XX:+UseSerialGC
+
+                                    -Xss256k
+
+                                    -XX:NativeMemoryTracking=summary
+                                    -XX:NativeMemoryTracking=detail
+
+
+                                    -Dcom.sun.management.jmxremote.ssl=false
+                                    -Dcom.sun.management.jmxremote.authenticate=false
+                                    -Dcom.sun.management.jmxremote.port=10103
+
+
+                                    -XX:+UnlockCommercialFeatures
+                                    -XX:+FlightRecorder
+                                    -XX:FlightRecorderOptions=defaultrecording=true,disk=true,repository=/data/profiling/tmp,settings=default,dumponexit=true,dumponexitpath=/data/profiling,maxage=6h
+                                    -->
+
+
                                     ${jacocoAgent}
                                 </argument>
                                 <argument>-Dsplice.spark.yarn.user=${user.name}</argument>
@@ -1368,15 +1438,27 @@
                                     -enableassertions
                                     -Djava.net.preferIPv4Stack=true
                                     -Djava.security.krb5.conf=${project.build.directory}/krb5.conf
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=30
+                                    -XX:+UseG1GC
+                                    <!---Xss256k-->
+
+
+                                    <!--
+                                    -XX:+UnlockCommercialFeatures
+                                    -XX:+FlightRecorder
+                                    -XX:FlightRecorderOptions=defaultrecording=true,disk=true,repository=/data/profiling/tmp,settings=default,dumponexit=true,dumponexitpath=/data/profiling,maxage=6h
+                                    -->
+
                                 </argument>
                                 <argument>${spark.keytab}</argument>
                                 <argument>${spark.principal}</argument>
                                 <argument>-Dsplice.spark.shuffle.file.buffer=128k</argument>
                                 <argument>-Dsplice.spark.shuffle.memoryFraction=0.7</argument>
                                 <argument>-Dsplice.spark.shuffle.service.enabled=true</argument>
-                                <argument>-Dsplice.spark.storage.memoryFraction=0.1</argument>
+                                <!--<argument>-Dsplice.spark.storage.memoryFraction=0.1</argument>-->
                                 <argument>-Dsplice.spark.yarn.am.waitTime=10s</argument>
                                 <!-- CMS Garbage Collection -->
+                                <!--
                                 <argument>-Xmn128m</argument>
                                 <argument>-XX:+UseConcMarkSweepGC</argument>
                                 <argument>-XX:+UseParNewGC</argument>
@@ -1387,6 +1469,20 @@
                                 <argument>-XX:MaxGCPauseMillis=100</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>-XX:MaxDirectMemorySize=1g</argument>
+                                -->
+
+                                <argument>-XX:+UseG1GC</argument>
+                                <!--<argument>-Xss256k</argument>-->
+
+                                <!--
+                                <argument>-XX:+UnlockCommercialFeatures</argument>
+                                <argument>-XX:+FlightRecorder</argument>
+                                <argument>-XX:FlightRecorderOptions=defaultrecording=true,disk=true,repository=/data/profiling/tmp,settings=default,dumponexit=true,dumponexitpath=/data/profiling,maxage=6h</argument>
+
+                                <argument>-XX:NativeMemoryTracking=summary</argument>
+                                <argument>-XX:NativeMemoryTracking=detail</argument>
+                                -->
+
                                 <argument>-enableassertions</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4000</argument>
                                 <!-- Setting the updateSystemProcs option to true causes all of the system stored procedures to be re-created on server startup. -->
@@ -1438,6 +1534,11 @@
                                 <argument>-classpath</argument>
                                 <classpath/>
                                 <argument>${jacocoAgent}</argument>
+                                <!--<argument>-agentpath:/opt/jprofiler/bin/linux-x64/libjprofilerti
+                                .so=port=8852,nowait,id=108,config=/home/wangbin/.jprofiler10/config.xml</argument>
+                                -->
+                                <argument>-XX:MinHeapFreeRatio=10</argument>
+                                <argument>-XX:MaxHeapFreeRatio=30</argument>
                                 <argument>-Djava.awt.headless=true</argument>
                                 <argument>-Djava.security.krb5.conf=${project.build.directory}/krb5.conf</argument>
                                 <argument>-Dlog4j.configuration=${log4j.config.uri}</argument>
@@ -1445,7 +1546,9 @@
                                 <argument>
                                     -Djava.library.path=${project.build.directory}/../../assembly/${envClassifier}/native/${os.detected.classifier}:/usr/local/lib/
                                 </argument>
-                                <argument>-Xmx4g</argument>
+                                <argument>-Xmx2g</argument>
+                                <!--<argument>-Xss256k</argument>-->
+                                <!--
                                 <argument>-Xmn128m</argument>
                                 <argument>-XX:+UseConcMarkSweepGC</argument>
                                 <argument>-XX:+UseParNewGC</argument>
@@ -1454,9 +1557,20 @@
                                 <argument>-XX:CMSInitiatingOccupancyFraction=70</argument>
                                 <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
                                 <argument>-XX:MaxGCPauseMillis=100</argument>
-                                <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4001</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>-XX:MaxDirectMemorySize=1g</argument>
+                                -->
+
+                                <!--
+                                <argument>-XX:+UnlockCommercialFeatures</argument>
+                                <argument>-XX:+FlightRecorder</argument>
+                                <argument>-XX:FlightRecorderOptions=defaultrecording=true,disk=true,repository=/data/profiling/tmp,settings=default,dumponexit=true,dumponexitpath=/data/profiling,maxage=6h</argument>
+                                -->
+
+
+                                <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4001</argument>
+                                <argument>-XX:+UseG1GC</argument>
+
                                 <argument>com.splicemachine.test.SpliceTestClusterParticipant</argument>
                                 <argument>${project.build.directory}</argument>
                                 <argument>${memberNumber}</argument>
@@ -1778,7 +1892,7 @@
                                 <clusterRegionserver>localhost</clusterRegionserver>
                             </propertiesUser>
                             <jMeterProcessJVMSettings>
-                                <xms>1024</xms>
+                                <xms>128</xms>
                                 <xmx>4096</xmx>
                                 <!--
                                 <arguments>
@@ -1876,8 +1990,8 @@
                                 <argument>
                                     -Djava.library.path=${project.build.directory}/../../assembly/${envClassifier}/native/${os.detected.classifier}:/usr/local/lib/
                                 </argument>
-                                <argument>-Xmx6g</argument>
-                                <argument>-Xms1g</argument>
+                                <argument>-Xmx2g</argument>
+                                <argument>-Xms64m</argument>
                                 <!-- Spark Sys props -->
                                 <argument>-Dsplice.spark.app.name=SpliceMachine</argument>
                                 <argument>-Dsplice.spark.sql.warehouse.dir=${project.build.directory}/spark-warehouse
@@ -1940,6 +2054,8 @@
                                 <argument>-Dsplice.spark.yarn.am.waitTime=10s</argument>
                                 <!-- CMS Garbage Collection -->
                                 <argument>-Xmn128m</argument>
+                                <argument>-XX:MinHeapFreeRatio=10</argument>
+                                <argument>-XX:MaxHeapFreeRatio=50</argument>
                                 <argument>-XX:+UseConcMarkSweepGC</argument>
                                 <argument>-XX:+UseParNewGC</argument>
                                 <argument>-XX:NewSize=128m</argument>
